belloga-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: belloga-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: belloga
spec:
  hosts:
  - "*"
  gateways:
  - belloga-gateway
  http:
  - match:
    - uri:
        prefix: /api/user
    route:
    - destination:
        host: user-service
        port:
          number: 8080

  - match:
    - uri:
        prefix: /api/data
    - uri:
        prefix: /api/labeled-data
    - uri:
        prefix: /api/labeled-result
    route:
    - destination:
        host: labeling-service
        port:
          number: 8080

  - match:
    - uri:
        prefix: /api/account
    route:
    - destination:
        host: auth-service
        port:
          number: 8080

  - match:
    - uri:
        prefix: /api/point
    - uri:
        prefix: /api/stemp
    - uri:
        prefix: /api/temp-point
    route:
    - destination:
        host: point-service
        port:
          number: 8080

  - match:
    - uri:
        prefix: /api/raw-data
    route:
    - destination:
        host: raw-data-service
        port:
          number: 8080
